...
                        .accessibilityIdentifier("tab-scan")
                }

            FoodLogsView(client: client, settingsAction: showSettings)
                .tabItem {
                    Label("Logs", systemImage: "book.closed")
                        .accessibilityIdentifier("tab-food-logs")
                }

            TrackingView(client: client, settingsAction: showSettings)
                .tabItem {
                    Label("Tracking", systemImage: "chart.bar.xaxis")
                        .accessibilityIdentifier("tab-tracking")
                }

            GlucoseView(client: client, settingsAction: showSettings)
                .tabItem {
                    Label("Glucose", systemImage: "chart.xyaxis.line")
                        .accessibilityIdentifier("tab-glucose")
...
